// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prioritizes loading complete over currently loading 1`] = `
<div>
  <View
    as="div"
    borderColor="default"
    debug={false}
    display="auto"
    focusColor="info"
    focusPosition="offset"
    focused={false}
    overflowX="visible"
    overflowY="visible"
    padding="small"
    position="static"
    shouldAnimateFocus={true}
    textAlign="center"
  >
    <View
      borderColor="default"
      debug={false}
      display="block"
      focusColor="info"
      focusPosition="offset"
      focused={false}
      margin="small"
      overflowX="visible"
      overflowY="visible"
      position="static"
      shouldAnimateFocus={true}
    >
      <TV
        aria-hidden="true"
        height="157"
        role="img"
        viewBox="0 0 174 157"
        width="174"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </View>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
      wrap="normal"
    >
      Beginning of Your To-Do History
    </Text>
    <Text
      as="div"
      letterSpacing="normal"
      size="medium"
      wrap="normal"
    >
      You've scrolled back to your very first To-Do!
    </Text>
  </View>
</div>
`;

exports[`renders TV when all past items loaded 1`] = `
<div>
  <View
    as="div"
    borderColor="default"
    debug={false}
    display="auto"
    focusColor="info"
    focusPosition="offset"
    focused={false}
    overflowX="visible"
    overflowY="visible"
    padding="small"
    position="static"
    shouldAnimateFocus={true}
    textAlign="center"
  >
    <View
      borderColor="default"
      debug={false}
      display="block"
      focusColor="info"
      focusPosition="offset"
      focused={false}
      margin="small"
      overflowX="visible"
      overflowY="visible"
      position="static"
      shouldAnimateFocus={true}
    >
      <TV
        aria-hidden="true"
        height="157"
        role="img"
        viewBox="0 0 174 157"
        width="174"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </View>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
      wrap="normal"
    >
      Beginning of Your To-Do History
    </Text>
    <Text
      as="div"
      letterSpacing="normal"
      size="medium"
      wrap="normal"
    >
      You've scrolled back to your very first To-Do!
    </Text>
  </View>
</div>
`;

exports[`renders spinner while loading 1`] = `
<div>
  <View
    as="div"
    borderColor="default"
    debug={false}
    display="auto"
    focusColor="info"
    focusPosition="offset"
    focused={false}
    overflowX="visible"
    overflowY="visible"
    padding="medium small small small"
    position="static"
    shouldAnimateFocus={true}
    textAlign="center"
  >
    <Spinner
      as="div"
      margin="0 x-small 0 0"
      renderTitle={[Function]}
      size="small"
      variant="default"
    />
    <Text
      as="span"
      color="secondary"
      letterSpacing="normal"
      size="small"
      wrap="normal"
    >
      Loading past items
    </Text>
  </View>
</div>
`;

exports[`renders very little 1`] = `<div />`;

exports[`shows an Alert when there's a query error 1`] = `
<div>
  <div
    style={
      Object {
        "margin": "0 auto",
        "width": "50%",
      }
    }
  >
    <ErrorAlert
      error="uh oh"
    >
      Error loading past items
    </ErrorAlert>
  </div>
</div>
`;
